k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: lab-app-svc
  namespace: lab
spec: 
  selector:
    app: lab-app
  ports:
    - name: http 
      port: 80
      targetPort: 8080
  type: ClusterIP
